Reformat russian translations

--- a/Mod/Data/Core/Languages/Russian/Attributes.xml
+++ b/Mod/Data/Core/Languages/Russian/Attributes.xml
@@ -1,1 +1,4 @@
-<language><entry name="MoraleDescription" value="Психологическое состояние подразделения. Моральный дух восстанавливается, если отряд не получил урона в этом ходу. Юниты с моральным духом ниже 66% становятся &lt;icon height='20'texture='Icons/Traits/Shaken'/&gt; потрясенными, что снижает точность на 17%. Единицы боевого духа ниже 33% становятся &lt;icon height='20'texture='Icons/Traits/Broken'/&gt; сломанными, что снижает точность на 33%." /></language>
+<language>
+    <entry name="MoraleDescription"
+           value="Психологическое состояние подразделения. Моральный дух восстанавливается, если отряд не получил урона в этом ходу. Юниты с моральным духом ниже 66% становятся <icon height='20'texture='Icons/Traits/Shaken'/> потрясенными, что снижает точность на 17%. Единицы боевого духа ниже 33% становятся <icon height='20'texture='Icons/Traits/Broken'/> сломанными, что снижает точность на 33%."/>
+</language>
