--- a/Mod/Data/Core/Languages/Russian/Buildings.xml
+++ b/Mod/Data/Core/Languages/Russian/Buildings.xml
@@ -1,1 +1,26 @@
-<language><entry name="AdeptusMechanicus/ConstructionDescription" value="Здание, которое возводит новые здания, а также увеличивает рост, производит еду, руду и влияние»." /><entry name="AstraMilitarum/ConstructionDescription" value="Здание, которое возводит новые здания, а также увеличивает рост, производит пищу и проводит исследования»." /><entry name="ChaosSpaceMarines/ConstructionDescription" value="Здание, которое возводит новые здания, а также увеличивает рост, генерирует руду и влияние»." /><entry name="Eldar/ConstructionDescription" value="Здание, которое строит новые здания, а также увеличивает рост, добывает руду, генерирует исследования и увеличивает рост»." /><entry name="Necrons/ConstructionDescription" value="Здание, которое возводит новые здания, а также увеличивает рост, генерирует энергию, влияние и повышает лояльность»." /><entry name="Orks/ConstructionDescription" value="Здание, которое возводит новые здания, увеличивает рост, генерирует руду и влияние, а также увеличивает лимит населения»." /><entry name="SistersOfBattle/ConstructionDescription" value="Здание, которое возводит новые здания, увеличивает рост и генерирует влияние»." /><entry name="SpaceMarines/ConstructionDescription" value="Здание, которое возводит новые здания, увеличивает рост и генерирует влияние»." /><entry name="Tau/ConstructionDescription" value="Здание, которое возводит новые здания, а также увеличивает рост, производит руду, исследования и влияние»." /><entry name="Tyranids/ConstructionDescription" value="Здание, которое строит новые здания, а также увеличивает рост, генерирует биомассу и увеличивает лимит населения»." /><entry name="Tau/MonstrousCreaturesDescription" value="Здание, которое производит чудовищных существ, а также способствует исследованиям и влиянию»." /><entry name="SistersOfBattle/VehiclesFlavor" value="Машины Адепта Сороритас — древние боевые танки-реликвии давних крестовых походов. В этом ангаре техники Министорума воскрешают машинные духи экзарсистов, карателей и самосожженцев, окропляют их священными маслами и священные заклинания передаются из поколения в поколение на протяжении тысячелетий. Для Тау и Вотаннов это было бы величайшим суеверием, однако машины работают со смертельной эффективностью»." /></language>
+<language>
+    <entry name="AdeptusMechanicus/ConstructionDescription"
+           value="Здание, которое возводит новые здания, а также увеличивает рост, производит еду, руду и влияние."/>
+    <entry name="AstraMilitarum/ConstructionDescription"
+           value="Здание, которое возводит новые здания, а также увеличивает рост, производит пищу и проводит исследования."/>
+    <entry name="ChaosSpaceMarines/ConstructionDescription"
+           value="Здание, которое возводит новые здания, а также увеличивает рост, генерирует руду и влияние."/>
+    <entry name="Eldar/ConstructionDescription"
+           value="Здание, которое строит новые здания, а также увеличивает рост, добывает руду, генерирует исследования и увеличивает рост."/>
+    <entry name="Necrons/ConstructionDescription"
+           value="Здание, которое возводит новые здания, а также увеличивает рост, генерирует энергию, влияние и повышает лояльность."/>
+    <entry name="Orks/ConstructionDescription"
+           value="Здание, которое возводит новые здания, увеличивает рост, генерирует руду и влияние, а также увеличивает лимит населения."/>
+    <entry name="SistersOfBattle/ConstructionDescription"
+           value="Здание, которое возводит новые здания, увеличивает рост и генерирует влияние."/>
+    <entry name="SpaceMarines/ConstructionDescription"
+           value="Здание, которое возводит новые здания, увеличивает рост и генерирует влияние."/>
+    <entry name="Tau/ConstructionDescription"
+           value="Здание, которое возводит новые здания, а также увеличивает рост, производит руду, исследования и влияние."/>
+    <entry name="Tyranids/ConstructionDescription"
+           value="Здание, которое строит новые здания, а также увеличивает рост, генерирует биомассу и увеличивает лимит населения."/>
+    <entry name="Tau/MonstrousCreaturesDescription"
+           value="Здание, которое производит чудовищных существ, а также способствует исследованиям и влиянию."/>
+    <entry name="SistersOfBattle/VehiclesFlavor"
+           value="Машины Адепта Сороритас — древние боевые танки-реликвии давних крестовых походов. В этом ангаре техники Министорума воскрешают машинные духи экзарсистов, карателей и самосожженцев, окропляют их священными маслами и священные заклинания передаются из поколения в поколение на протяжении тысячелетий. Для Тау и Вотаннов это было бы величайшим суеверием, однако машины работают со смертельной эффективностью."/>
+</language>
