--- a/Mod/Data/Core/Languages/Russian/GUI.xml
+++ b/Mod/Data/Core/Languages/Russian/GUI.xml
@@ -1,1 +1,4 @@
-<language><entry name="DynasticCodes" value="Династические кодексы»" /></language>
+<language>
+    <entry name="DynasticCodes"
+           value="Династические кодексы"/>
+</language>
