--- a/Mod/Data/Core/Languages/Russian/Units.xml
+++ b/Mod/Data/Core/Languages/Russian/Units.xml
@@ -1,1 +1,104 @@
-<language><entry name="SpaceMarines/Captain" value="Капитан заблудших»" /><entry name="SpaceMarines/ChaplainDescription" value="Ревностный герой, ведущий рукопашный бой и внушающий преданность»." /><entry name="SpaceMarines/DevastatorCenturionDescription" value="Очень громоздкое противотанковое пехотное подразделение»." /><entry name="SpaceMarines/HonourGuard" value="Почетный караул&quot;" /><entry name="SpaceMarines/HonourGuardDescription" value="Элитные кадры ветеранов космического десанта»." /><entry name="SpaceMarines/Techmarine" value="Техмарин&quot;" /><entry name="SpaceMarines/TechmarineDescription" value="Техник и инженер, а также полноправный боевой брат Астартес»." /><entry name="SpaceMarines/TechmarineFlavor" value="Они учатся гадать по рунам инженерного дела и изучают литургию технического обслуживания. Этот огромный массив знаний должен быть запомнен и понят новичком-технодесантником»." /><entry name="SpaceMarines/KillTeamEliminators" value="Уничтожить команду ликвидаторов»" /><entry name="SpaceMarines/KillTeamEliminatorsDescription" value="Замаскированное пехотное подразделение, способное поразить любую цель»." /><entry name="SpaceMarines/KillTeamEliminatorsFlavor" value="После того, как он отмечен, добыче Элиминатора негде спрятаться, и никакое количество защитной брони не сможет остановить смертельный выстрел»." /><entry name="SpaceMarines/WhirlwindDescription" value="Артиллерийский танк, способный уничтожать вражескую пехоту смертельными взрывами и разрушать оборонительные сооружения»." /><entry name="Necrons/DeathmarkDescription" value="Снайперский отряд»." /><entry name="Necrons/DestroyerLordDescription" value="Героический отряд с мощными аурами и возможностями дальнего боя»." /><entry name="Necrons/ObeliskDescription" value="Сверхтяжелый скиммер с мощными противотанковыми возможностями, который защищает близлежащие пехотные подразделения союзников»." /><entry name="Eldar/Autarch" value="Автарх&quot;" /><entry name="Eldar/AutarchDescription" value="Отряд героев-псайкеров, возглавляющий атаку эльдар»." /><entry name="Eldar/AutarchFlavor" value="Автархи обладают совершенным пониманием пути воина, и будущее расы определяется их мастерством в искусстве смерти. Они следуют Путем Командования, получая более широкое понимание битвы, чем кто-либо другой, и направляя воинство по наиболее эффективному пути к победе. У них есть жгучая одержимость желанием увидеть, как сама война побеждена и подчинена их воле»." /><entry name="Eldar/HornetDescription" value="Быстрый разведывательный скиммер, способный очищать плитки»." /><entry name="AdeptusMechanicus/IronstriderBallistariusDescription" value="Быстроходное подразделение «Доктрина Императив», оснащенное лазерной пушкой»." /><entry name="Tau/GunDroneDescription" value="Базовый боевой дрон, который помечает врагов для увеличения урона»." /><entry name="Tau/BroadsideBattlesuit" value="Боевые костюмы &quot;Бродсайд&quot;" /><entry name="Tau/GhostkeelBattlesuit" value="Боевой костюм Призрачного Киля&quot;" /><entry name="Tau/GravInhibitorDrone" value="Гравитационно-ингибиторные дроны»" /><entry name="Tau/InterceptorDrone" value="Дроны-перехватчики»" /><entry name="Tau/PulseAcceleratorDrone" value="Импульсные дроны-ускорители»" /><entry name="Tau/RiptideBattlesuit" value="Боевой костюм «Быстрый поток»" /><entry name="Tau/ShieldedMissileDrone" value="Защищенные ракетные дроны»" /><entry name="Tau/SkyRayGunship" value="Боевой корабль «Небесный луч»" /><entry name="Tau/StealthBattlesuit" value="Стелс-боевые костюмы»" /><entry name="Tau/Stormsurge" value="Штормовая волна&quot;" /><entry name="Tau/SunSharkBomber" value="Бомбардировщик «Солнечная акула»" /><entry name="Tau/CrisisBattlesuit" value="Кризисные боевые костюмы»" /><entry name="Tau/Devilfish" value="Дьявольская рыба&quot;" /><entry name="Tau/GunDrone" value="Оружейные дроны»" /><entry name="Tau/TacticalDrone" value="Джарвис&quot;" /><entry name="Tau/TacticalDroneDescription" value="&lt;string name='Units/Tau/GunDroneDescription'/&gt;&quot;" /><entry name="Tau/TacticalDroneFlavor" value="&lt;string name='Units/Tau/GunDroneFlavor'/&gt;&quot;" /><entry name="Tau/HammerheadGunship" value="Боевой корабль &quot;Молот&quot;" /><entry name="Tau/Piranha" value="Пиранья&quot;" /><entry name="Tau/MarkerDrone" value="Маркерные дроны&quot;" /><entry name="Tau/RazorsharkStrikeFighter" value="Ударный истребитель &quot;Острая акула&quot;" /><entry name="Tau/ReconDrone" value="Разведывательные дроны»" /><entry name="Tau/ShieldDrone" value="Щитовые дроны»" /><entry name="Tau/StealthDrone" value="Дроны-невидимки»" /><entry name="Tau/RVarnaBattlesuit" value="Боевой костюм Р'Варны&quot;" /><entry name="SistersOfBattle/Exorcist" value="Экзарсист&quot;" /><entry name="SistersOfBattle/CastigatorDescription" value="Мощный танковый отряд, оснащенный мультимелтами»." /><entry name="SistersOfBattle/SisterAssassinorum" value="Сестры Ассасинорум&quot;" /><entry name="SistersOfBattle/SisterAssassinorumDescription" value="Снайперский отряд»." /><entry name="SistersOfBattle/SisterAssassinorumFlavor" value="На долю секунды кажется, что мир меняется по воле одного-единственного воина»." /></language>
+<language>
+    <entry name="SpaceMarines/Captain"
+           value="Капитан заблудших"/>
+    <entry name="SpaceMarines/ChaplainDescription"
+           value="Ревностный герой, ведущий рукопашный бой и внушающий преданность."/>
+    <entry name="SpaceMarines/DevastatorCenturionDescription"
+           value="Очень громоздкое противотанковое пехотное подразделение."/>
+    <entry name="SpaceMarines/HonourGuard"
+           value="Почетный караул"/>
+    <entry name="SpaceMarines/HonourGuardDescription"
+           value="Элитные кадры ветеранов космического десанта."/>
+    <entry name="SpaceMarines/Techmarine"
+           value="Техмарин"/>
+    <entry name="SpaceMarines/TechmarineDescription"
+           value="Техник и инженер, а также полноправный боевой брат Астартес."/>
+    <entry name="SpaceMarines/TechmarineFlavor"
+           value="Они учатся гадать по рунам инженерного дела и изучают литургию технического обслуживания. Этот огромный массив знаний должен быть запомнен и понят новичком-технодесантником."/>
+    <entry name="SpaceMarines/KillTeamEliminators"
+           value="Уничтожить команду ликвидаторов"/>
+    <entry name="SpaceMarines/KillTeamEliminatorsDescription"
+           value="Замаскированное пехотное подразделение, способное поразить любую цель."/>
+    <entry name="SpaceMarines/KillTeamEliminatorsFlavor"
+           value="После того, как он отмечен, добыче Элиминатора негде спрятаться, и никакое количество защитной брони не сможет остановить смертельный выстрел."/>
+    <entry name="SpaceMarines/WhirlwindDescription"
+           value="Артиллерийский танк, способный уничтожать вражескую пехоту смертельными взрывами и разрушать оборонительные сооружения."/>
+    <entry name="Necrons/DeathmarkDescription"
+           value="Снайперский отряд."/>
+    <entry name="Necrons/DestroyerLordDescription"
+           value="Героический отряд с мощными аурами и возможностями дальнего боя."/>
+    <entry name="Necrons/ObeliskDescription"
+           value="Сверхтяжелый скиммер с мощными противотанковыми возможностями, который защищает близлежащие пехотные подразделения союзников."/>
+    <entry name="Eldar/Autarch"
+           value="Автарх"/>
+    <entry name="Eldar/AutarchDescription"
+           value="Отряд героев-псайкеров, возглавляющий атаку эльдар."/>
+    <entry name="Eldar/AutarchFlavor"
+           value="Автархи обладают совершенным пониманием пути воина, и будущее расы определяется их мастерством в искусстве смерти. Они следуют Путем Командования, получая более широкое понимание битвы, чем кто-либо другой, и направляя воинство по наиболее эффективному пути к победе. У них есть жгучая одержимость желанием увидеть, как сама война побеждена и подчинена их воле."/>
+    <entry name="Eldar/HornetDescription"
+           value="Быстрый разведывательный скиммер, способный очищать плитки."/>
+    <entry name="AdeptusMechanicus/IronstriderBallistariusDescription"
+           value="Быстроходное подразделение Доктрина Императив, оснащенное лазерной пушкой."/>
+    <entry name="Tau/GunDroneDescription"
+           value="Базовый боевой дрон, который помечает врагов для увеличения урона."/>
+    <entry name="Tau/BroadsideBattlesuit"
+           value="Боевые костюмы Бродсайд"/>
+    <entry name="Tau/GhostkeelBattlesuit"
+           value="Боевой костюм Призрачного Киля"/>
+    <entry name="Tau/GravInhibitorDrone"
+           value="Гравитационно-ингибиторные дроны"/>
+    <entry name="Tau/InterceptorDrone"
+           value="Дроны-перехватчики"/>
+    <entry name="Tau/PulseAcceleratorDrone"
+           value="Импульсные дроны-ускорители"/>
+    <entry name="Tau/RiptideBattlesuit"
+           value="Боевой костюм Быстрый поток"/>
+    <entry name="Tau/ShieldedMissileDrone"
+           value="Защищенные ракетные дроны"/>
+    <entry name="Tau/SkyRayGunship"
+           value="Боевой корабль Небесный луч"/>
+    <entry name="Tau/StealthBattlesuit"
+           value="Стелс-боевые костюмы"/>
+    <entry name="Tau/Stormsurge"
+           value="Штормовая волна"/>
+    <entry name="Tau/SunSharkBomber"
+           value="Бомбардировщик Солнечная акула"/>
+    <entry name="Tau/CrisisBattlesuit"
+           value="Кризисные боевые костюмы"/>
+    <entry name="Tau/Devilfish"
+           value="Дьявольская рыба"/>
+    <entry name="Tau/GunDrone"
+           value="Оружейные дроны"/>
+    <entry name="Tau/TacticalDrone"
+           value="Джарвис"/>
+    <entry name="Tau/TacticalDroneDescription"
+           value="<string name='Units/Tau/GunDroneDescription'/>"/>
+    <entry name="Tau/TacticalDroneFlavor"
+           value="<string name='Units/Tau/GunDroneFlavor'/>"/>
+    <entry name="Tau/HammerheadGunship"
+           value="Боевой корабль Молот"/>
+    <entry name="Tau/Piranha"
+           value="Пиранья"/>
+    <entry name="Tau/MarkerDrone"
+           value="Маркерные дроны"/>
+    <entry name="Tau/RazorsharkStrikeFighter"
+           value="Ударный истребитель Острая акула"/>
+    <entry name="Tau/ReconDrone"
+           value="Разведывательные дроны"/>
+    <entry name="Tau/ShieldDrone"
+           value="Щитовые дроны"/>
+    <entry name="Tau/StealthDrone"
+           value="Дроны-невидимки"/>
+    <entry name="Tau/RVarnaBattlesuit"
+           value="Боевой костюм Р'Варны"/>
+    <entry name="SistersOfBattle/Exorcist"
+           value="Экзарсист"/>
+    <entry name="SistersOfBattle/CastigatorDescription"
+           value="Мощный танковый отряд, оснащенный мультимелтами."/>
+    <entry name="SistersOfBattle/SisterAssassinorum"
+           value="Сестры Ассасинорум"/>
+    <entry name="SistersOfBattle/SisterAssassinorumDescription"
+           value="Снайперский отряд."/>
+    <entry name="SistersOfBattle/SisterAssassinorumFlavor"
+           value="На долю секунды кажется, что мир меняется по воле одного-единственного воина."/>
+</language>
