--- a/Mod/Data/Core/Languages/Russian/Attributes.xml
+++ b/Mod/Data/Core/Languages/Russian/Attributes.xml
@@ -1,4 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="MoraleDescription"
-           value="Психологическое состояние подразделения. Моральный дух восстанавливается, если отряд не получил урона в этом ходу. Юниты с моральным духом ниже 66% становятся <icon height='20'texture='Icons/Traits/Shaken'/> потрясенными, что снижает точность на 17%. Единицы боевого духа ниже 33% становятся <icon height='20'texture='Icons/Traits/Broken'/> сломанными, что снижает точность на 33%."/>
+           value="The psychological state of the unit. Morale regenerates if the unit has not taken damage this turn. Below 66% morale units become <icon height='20' texture='Icons/Traits/Shaken'/> shaken, decreasing accuracy by 17%. Below 33% morale units become <icon height='20' texture='Icons/Traits/Broken'/> broken, decreasing accuracy by 33%."/>
 </language>
