--- a/Mod/Data/Core/Languages/Russian/Features.xml
+++ b/Mod/Data/Core/Languages/Russian/Features.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="NullZone"
            value="<string name='Traits/NullZone'/>"/>
@@ -6,17 +7,17 @@
     <entry name="NullZoneFlavor"
            value="<string name='Traits/NullZoneFlavor'/>"/>
     <entry name="SacredGround"
-           value="Священная земля"/>
+           value="Sacred Ground"/>
     <entry name="SacredGroundDescription"
-           value="Функция, завершающая движение юнита и накладывающая на врага дебафф постепенного урона."/>
+           value="Feature that ends the movement of a unit and applies damage over time debuff to the enemy."/>
     <entry name="SacredGroundFlavor"
-           value="Верните себе власть Императора и освятите ее еще раз."/>
+           value="Reclaim the Emperor’s dominion and consecrate it once more."/>
     <entry name="ShatteredDefences"
            value="<string name='Traits/ShatteredDefences'/>"/>
     <entry name="ShatteredDefencesDescription"
            value="<string name='Traits/ShatteredDefencesDescription'/>"/>
     <entry name="CursedGround"
-           value="Проклятая земля"/>
+           value="Cursed Ground"/>
     <entry name="CursedGroundDescription"
-           value="Функция, завершающая движение юнита и накладывающая на врага дебафф постепенного урона."/>
+           value="Feature that ends the movement of a unit and applies damage over time debuff to the enemy."/>
 </language>
