--- a/Mod/Data/Core/Languages/Russian/GUI.xml
+++ b/Mod/Data/Core/Languages/Russian/GUI.xml
@@ -1,4 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="DynasticCodes"
-           value="Династические кодексы"/>
+           value="Dynastic Codes"/>
 </language>
