--- a/Mod/Data/Core/Languages/Russian/Units.xml
+++ b/Mod/Data/Core/Languages/Russian/Units.xml
@@ -1,104 +1,111 @@
+<?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="SpaceMarines/Captain"
-           value="Капитан заблудших"/>
+           value="Captain of the Lost"/>
     <entry name="SpaceMarines/ChaplainDescription"
-           value="Ревностный герой, ведущий рукопашный бой и внушающий преданность."/>
+           value="Zealous hero unit that leads melee combat and inspires loyalty."/>
     <entry name="SpaceMarines/DevastatorCenturionDescription"
-           value="Очень громоздкое противотанковое пехотное подразделение."/>
+           value="Very bulky anti-tank infantry unit."/>
     <entry name="SpaceMarines/HonourGuard"
-           value="Почетный караул"/>
+           value="Honour Guard"/>
     <entry name="SpaceMarines/HonourGuardDescription"
-           value="Элитные кадры ветеранов космического десанта."/>
+           value="Elite cadre of Veteran Space Marines."/>
     <entry name="SpaceMarines/Techmarine"
-           value="Техмарин"/>
+           value="Techmarine"/>
     <entry name="SpaceMarines/TechmarineDescription"
-           value="Техник и инженер, а также полноправный боевой брат Астартес."/>
+           value="Technician and engineer as well as a full Astartes battle-brother."/>
     <entry name="SpaceMarines/TechmarineFlavor"
-           value="Они учатся гадать по рунам инженерного дела и изучают литургию технического обслуживания. Этот огромный массив знаний должен быть запомнен и понят новичком-технодесантником."/>
+           value="They learn how to divine the runes of engineering and study the liturgy of maintenance. This great body of lore must be committed to memory and understood by the novice Techmarine."/>
     <entry name="SpaceMarines/KillTeamEliminators"
-           value="Уничтожить команду ликвидаторов"/>
+           value="Kill Team Eliminators"/>
     <entry name="SpaceMarines/KillTeamEliminatorsDescription"
-           value="Замаскированное пехотное подразделение, способное поразить любую цель."/>
+           value="Cloaked infantry unit equipped to bring down any target."/>
     <entry name="SpaceMarines/KillTeamEliminatorsFlavor"
-           value="После того, как он отмечен, добыче Элиминатора негде спрятаться, и никакое количество защитной брони не сможет остановить смертельный выстрел."/>
+           value="Once marked, there is nowhere for an Eliminator's prey to hide, and no amount of protective armour that can stop the killing shot."/>
     <entry name="SpaceMarines/WhirlwindDescription"
-           value="Артиллерийский танк, способный уничтожать вражескую пехоту смертельными взрывами и разрушать оборонительные сооружения."/>
+           value="Artillery tank that capable of wiping out swathes of enemy infantry in lethal explosions and shatter tile defences."/>
+
     <entry name="Necrons/DeathmarkDescription"
-           value="Снайперский отряд."/>
+           value="Sniper unit."/>
     <entry name="Necrons/DestroyerLordDescription"
-           value="Героический отряд с мощными аурами и возможностями дальнего боя."/>
+           value="Hero unit with powerful auras and ranged capabilities."/>
     <entry name="Necrons/ObeliskDescription"
-           value="Сверхтяжелый скиммер с мощными противотанковыми возможностями, который защищает близлежащие пехотные подразделения союзников."/>
+           value="Super-heavy skimmer unit with powerful anti-tank capabilities that protects nearby allied infantry units."/>
+
     <entry name="Eldar/Autarch"
-           value="Автарх"/>
+           value="Autarch"/>
     <entry name="Eldar/AutarchDescription"
-           value="Отряд героев-псайкеров, возглавляющий атаку эльдар."/>
+           value="Psyker hero unit that leads the Aeldari charge."/>
     <entry name="Eldar/AutarchFlavor"
-           value="Автархи обладают совершенным пониманием пути воина, и будущее расы определяется их мастерством в искусстве смерти. Они следуют Путем Командования, получая более широкое понимание битвы, чем кто-либо другой, и направляя воинство по наиболее эффективному пути к победе. У них есть жгучая одержимость желанием увидеть, как сама война побеждена и подчинена их воле."/>
+           value="Autarchs have a consummate understanding of the way of the warrior, and the future of the race has been shaped by their excellence in the arts of death. They follow the Path of Command, gaining a wider appreciation of battle than any other and directing the warhost on the most efficient path to victory. Theirs is a burning obsession to see war itself conquered and made subservient to their will."/>
     <entry name="Eldar/HornetDescription"
-           value="Быстрый разведывательный скиммер, способный очищать плитки."/>
+           value="Fast reconnaissance skimmer unit that can clear tiles."/>
+
     <entry name="AdeptusMechanicus/IronstriderBallistariusDescription"
-           value="Быстроходное подразделение Доктрина Императив, оснащенное лазерной пушкой."/>
+           value="Doctrina Imperatives fast walker unit equipped with las-cannon."/>
+
     <entry name="Tau/GunDroneDescription"
-           value="Базовый боевой дрон, который помечает врагов для увеличения урона."/>
+           value="Basic combat drone unit that marks enemies for increased damage."/>
     <entry name="Tau/BroadsideBattlesuit"
-           value="Боевые костюмы Бродсайд"/>
+           value="Broadside Battlesuits"/>
     <entry name="Tau/GhostkeelBattlesuit"
-           value="Боевой костюм Призрачного Киля"/>
+           value="Ghostkeel Battlesuit"/>
     <entry name="Tau/GravInhibitorDrone"
-           value="Гравитационно-ингибиторные дроны"/>
+           value="Grav-Inhibitor Drones"/>
     <entry name="Tau/InterceptorDrone"
-           value="Дроны-перехватчики"/>
+           value="Interceptor Drones"/>
     <entry name="Tau/PulseAcceleratorDrone"
-           value="Импульсные дроны-ускорители"/>
+           value="Pulse Accelerator Drones"/>
     <entry name="Tau/RiptideBattlesuit"
-           value="Боевой костюм Быстрый поток"/>
+           value="Riptide Battlesuit"/>
     <entry name="Tau/ShieldedMissileDrone"
-           value="Защищенные ракетные дроны"/>
+           value="Shielded Missile Drones"/>
     <entry name="Tau/SkyRayGunship"
-           value="Боевой корабль Небесный луч"/>
+           value="Sky Ray Gunship"/>
     <entry name="Tau/StealthBattlesuit"
-           value="Стелс-боевые костюмы"/>
+           value="Stealth Battlesuits"/>
     <entry name="Tau/Stormsurge"
-           value="Штормовая волна"/>
+           value="Stormsurge"/>
     <entry name="Tau/SunSharkBomber"
-           value="Бомбардировщик Солнечная акула"/>
+           value="Sun Shark Bomber"/>
     <entry name="Tau/CrisisBattlesuit"
-           value="Кризисные боевые костюмы"/>
+           value="Crisis Battlesuits"/>
     <entry name="Tau/Devilfish"
-           value="Дьявольская рыба"/>
+           value="Devilfish"/>
     <entry name="Tau/GunDrone"
-           value="Оружейные дроны"/>
+           value="Gun Drones"/>
     <entry name="Tau/TacticalDrone"
-           value="Джарвис"/>
+           value="Jarvis"/>
     <entry name="Tau/TacticalDroneDescription"
            value="<string name='Units/Tau/GunDroneDescription'/>"/>
     <entry name="Tau/TacticalDroneFlavor"
            value="<string name='Units/Tau/GunDroneFlavor'/>"/>
     <entry name="Tau/HammerheadGunship"
-           value="Боевой корабль Молот"/>
+           value="Hammerhead Gunship"/>
     <entry name="Tau/Piranha"
-           value="Пиранья"/>
+           value="Piranha"/>
     <entry name="Tau/MarkerDrone"
-           value="Маркерные дроны"/>
+           value="Marker Drones"/>
     <entry name="Tau/RazorsharkStrikeFighter"
-           value="Ударный истребитель Острая акула"/>
+           value="Razorshark Strike Fighter"/>
     <entry name="Tau/ReconDrone"
-           value="Разведывательные дроны"/>
+           value="Recon Drones"/>
     <entry name="Tau/ShieldDrone"
-           value="Щитовые дроны"/>
+           value="Shield Drones"/>
     <entry name="Tau/StealthDrone"
-           value="Дроны-невидимки"/>
+           value="Stealth Drones"/>
     <entry name="Tau/RVarnaBattlesuit"
-           value="Боевой костюм Р'Варны"/>
+           value="R'Varna Battlesuit"/>
+
     <entry name="SistersOfBattle/Exorcist"
-           value="Экзарсист"/>
+           value="Exarsist"/>
     <entry name="SistersOfBattle/CastigatorDescription"
-           value="Мощный танковый отряд, оснащенный мультимелтами."/>
+           value="Powerful tank unit equipped with multi meltas."/>
     <entry name="SistersOfBattle/SisterAssassinorum"
-           value="Сестры Ассасинорум"/>
+           value="Sisters Assassinorum"/>
     <entry name="SistersOfBattle/SisterAssassinorumDescription"
-           value="Снайперский отряд."/>
+           value="Sniper unit."/>
     <entry name="SistersOfBattle/SisterAssassinorumFlavor"
-           value="На долю секунды кажется, что мир меняется по воле одного-единственного воина."/>
+           value="For a split second, it seems as though the world reshapes itself to the will of a single warrior."/>
+
 </language>
