--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -343,7 +343,7 @@
     <entry name="SistersOfBattle/EternalFire"
            value="Eternal Fire"/>
     <entry name="SistersOfBattle/EternalFireDescription"
-           value="Grants Immolators, Sisters Assassinorum, Celestial Sacresants and Lightning Fighters ability to imbue their attacks with holy fire that applies damage over time debuff to the attacked enemy."/>
+           value="Grants Dominions, Immolators, Sisters Assassinorum, Celestial Sacresants and Lightning Fighters ability to imbue their attacks with holy fire that applies damage over time debuff to the attacked enemy. Grants Dominions additional ranged damage reduction for nearby enemies affected by holy fire."/>
     <entry name="SistersOfBattle/EternalFireFlavor"
            value="Burn the mutant. Burn the heretic. Burn the witch."/>
     <entry name="SistersOfBattle/FaithAndFury"
